# jikanpy

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  V4_upgrade_changes.md  examples.py  examplesasync.py  generate_v4  makefile  mypy.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
v4/: Makefile  README.md  bootstrap_v4  example.py  pyproject.toml  setup.cfg
v4/jikan_api_client/: __init__.py
v4/jikan_api_client/api/anime/: get_anime_by_id.py  get_anime_characters.py  get_anime_episode_by_id.py  get_anime_episodes.py  get_anime_external.py  get_anime_forum.py  get_anime_more_info.py  get_anime_news.py  (+10 more)
v4/jikan_api_client/models/: __init__.py  anime.py  anime_characters.py  anime_characters_data_item.py  anime_characters_data_item_character.py  anime_characters_data_item_voice_actors_item.py  anime_characters_data_item_voice_actors_item_person.py  anime_episode.py  anime_episode_data.py  anime_episodes.py  anime_episodes_data_item.py  anime_images.py  anime_images_jpg.py  anime_images_webp.py  anime_meta.py  anime_news.py  anime_rating.py  anime_relations.py  anime_relations_data_item.py  anime_review.py  anime_review_scores.py  anime_reviews.py  anime_reviews_data_item.py  anime_search.py  anime_search_query_orderby.py  anime_search_query_rating.py  anime_search_query_status.py  anime_search_query_type.py  anime_season.py  anime_staff.py  anime_staff_data_item.py  anime_staff_data_item_person.py  anime_statistics.py  anime_statistics_data.py  anime_statistics_data_scores_item.py  anime_status.py  anime_themes.py  anime_themes_data.py  anime_type.py  anime_userupdates.py  (+193 more)
v4/jikanpy/: __init__.py  client_wrapper.py
(+212 files in other folders)
