[metadata]
description-file = README.md
license = MIT
license-file = LICENSE

[flake8]
max_line_length = 130
ignore = E501,E402,W503,E266,E203,F401

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
show_column_numbers = True
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
implicit_reexport = False
strict_equality = True
